--- a/css/test1.css
+++ b/css/test1.css
@@ -153,15 +153,16 @@ ul, li {list-style:none;}
 }
 
 
-@media screen and (max-width:300px) {
-	#list .MainTitle{
+@media screen and (min-width : 320px) and (max-width:480px) {
+    [id="menuicon"] {display: none;}
+	.MainTitle{
 		flex-direction: column;
 	}
 
 }
 
-@media (min-width : 301px) {
-	.list  > div  {
-		flex:calc(25% - 25px);
+@media screen and (min-width : 480px) and (max-width:700px) {
+	#list .MainTitle{
+		flex-direction: column;
 	}
 }
