--- a/css/test1.css
+++ b/css/test1.css
@@ -154,7 +154,7 @@ ul, li {list-style:none;}
 
 
 @media screen and (min-width : 320px) and (max-width:480px) {
-    [id="menuicon"] {display: none;}
+    [id="menuicon"] {display: none; background-color: aquamarine;}
 	.MainTitle{
 		flex-direction: column;
 	}
