--- a/css/test1.css
+++ b/css/test1.css
@@ -144,7 +144,7 @@ ul, li {list-style:none;}
 
 @media screen and (min-width : 320px) and (max-width:480px) {
     .sidebar {display: none;}
-	#menuicon {display: none;}
+	.menuicon {display: none;}
 	.MainTitle{
 		flex-direction: column;margin:auto;overflow: auto;
 	}
