--- a/css/test1.css
+++ b/css/test1.css
@@ -16,7 +16,7 @@ input[type="checkbox"] {display: none;}
 
 /*아래 추가 버튼*/
 
-
+.map_random {display:top: 200%
 
 
 /*메인이름 위치*/
@@ -140,3 +140,6 @@ ul, li {list-style:none;}
 
 /*기기 화면 크기에 따른 화면 크기 전환 */
 
+@media screen and (max-width : 1000px) {
+
+}
