--- a/css/test1.css
+++ b/css/test1.css
@@ -16,12 +16,12 @@ input[type="checkbox"] {display: none;}
 
 /*아래 추가 버튼*/
 
-.map_random {display:top: 200%
+
 
 
 /*메인이름 위치*/
 
-.MainTitle {margin-left:420px;margin-top: 30px;}
+.MainTitle {margin-left:25%;margin-top: 3%;}
 
 
 
