--- a/css/test1.css
+++ b/css/test1.css
@@ -1,11 +1,11 @@
 input[type="checkbox"] {display: none;}
 
 /* 메뉴 상단바 버튼*/
-[id="menuicon"] + label {display:block;margin:30px;width:50px;height:50px;position:fixed;left : 25px; top : 20px ;cursor:pointer;}
-[id="menuicon"] + label span {display:block;position:absolute;width:100%;height:3px;border-radius:30px;background:#000;transition:all .35s;}
+[id="menuicon"] + label {display:block;margin:3%;width:50px;height:51px; position:fixed;left : 25px; top : 3%;cursor:pointer;}
+[id="menuicon"] + label span {display:block;position:absolute;width:100%;height:5%;border-radius:30px;background:#000;transition:all .35s;}
 [id="menuicon"] + label span:nth-child(1) {top:5px;}
 [id="menuicon"] + label span:nth-child(2) {top:50%;transform:translateY(-50%);}
-[id="menuicon"] + label span:nth-child(3) {bottom:5px;}
+[id="menuicon"] + label span:nth-child(3) {bottom:6px;}
 [id="menuicon"]:checked + label {z-index:2; left : 230px;}
 [id="menuicon"]:checked + label span {background:rgb(0, 0, 0);}
 [id="menuicon"]:checked + label span:nth-child(1) {top:50%;transform:translateY(-50%) rotate(45deg);}
@@ -21,7 +21,7 @@ input[type="checkbox"] {display: none;}
 
 /*메인이름 위치*/
 
-.MainTitle {margin-left:25%;margin-top: 3%;}
+.wrap { width : 38%; margin-left : 25%; margin-top: 2.6%;}
 
 
 
