--- a/css/test1.css
+++ b/css/test1.css
@@ -19,8 +19,21 @@ input[type="checkbox"] {display: none;}
 		display: none;
 	}
 	[id="menuicon"] + label {
-		display: none;
+		display:block;margin:3%;width:30px;height:30px; position:fixed;left : 25px; top : 3%;cursor:pointer;
 	}
+	[id="menuicon"] + label span {
+		display:block;position:absolute;width:100%;height:5%;border-radius:30px;background:#000;transition:all .35s;
+	}
+    [id="menuicon"]:checked + label span:nth-child(1) {
+		top:5px;
+	}
+
+	[id="menuicon"]:checked + label span:nth-child(2) {
+	    top:50%;transform:translateY(-50%);
+	}
+	[id="menuicon"]:checked + label span:nth-child(3) {
+        bottom:6px;
+	} 
 	.sidebar {
 		display: none;
 	}
