--- a/css/test1.css
+++ b/css/test1.css
@@ -71,6 +71,11 @@ a {
     color:#fff
 }
 
+/*메뉴추천, 지도*/
+[class="conbox con1"] {margin-top:120px;margin-bottom: 60px; padding:0;}
+[class="conbox con2"] {margin-top:120px;margin-bottom: 60px; padding:0;}
+
+
 
 /*이미지 슬라이드*/
 
